syntax = "proto3";

package complex;

option go_package = "complexpb";

message ComplexMessage {
    DummyMessage one_dummy = 1;
    repeated DummyMessage muiltiple_dummy = 2;
}

message DummyMessage {
    int32 id = 1;
    string name = 2;
}